<?xml version="1.0"?>
<package format="2">
  <name>diagnostic_msgs</name>
  <version>2.0.0</version>
  <description>Standard ROS 2 diagnostic messages</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
</package>
